# OpenTokenMonitor

./: .gitignore  ARCHITECTURE.md  BUILDING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
docs/: 404.html  CNAME  antigravity-migration-spec.md  app.jsx  index.html  styles.css
docs/forge/: HANDOFF-PROVIDER-TRACKING.md  README.md  RELEASE-NOTES-v2.md  swarm-manifest.json
docs/plans/: 2026-02-28-ui-redesign-design.md  2026-02-28-ui-redesign.md
docs/releases/: v0.3.0.md
docs/research/: provider-usage-research-2026-03-12.md
scripts/: build-macos-installer.sh
src/: App.tsx  index.css  main.tsx  tauri-plugin-shims.d.ts  types.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alerts.rs  autostart.rs  commands.rs  lib.rs  main.rs  pricing.rs  tray.rs  usage_scanners.rs
src-tauri/src/providers/: auth.rs  mod.rs  registry.rs
src-tauri/src/providers/antigravity/: descriptor.rs  live_fetcher.rs  mod.rs
src-tauri/src/providers/claude/: descriptor.rs  keychain.rs  log_parser.rs  mod.rs  oauth_fetcher.rs
src-tauri/src/providers/codex/: bearer_fetcher.rs  cookie_fetcher.rs  descriptor.rs  log_parser.rs  mod.rs  oauth_refresh.rs  rpc_fetcher.rs
src-tauri/src/providers/gemini/: descriptor.rs  mod.rs  oauth_fetcher.rs  stats_parser.rs
src-tauri/src/usage/: aggregator.rs  mod.rs  models.rs  store.rs
src-tauri/src/watchers/: file_watcher.rs  mod.rs  poll_scheduler.rs
src/components/: CliActivityItem.tsx  HomeLimits.tsx  ProviderCard.tsx  Settings.tsx  UsageChart.tsx
src/constants/: appMeta.ts
src/hooks/: useGlassTheme.ts  useKeyboardShortcuts.ts  useLaunchAtStartupSync.ts  useProviderStatus.ts  useSpecularHighlight.ts  useUsageData.ts  useWidgetResize.ts
src/services/: api.ts  usageExact.ts
src/stores/: settingsStore.ts  usageStore.ts
src/styles/: activity.css  animations.css  glass.css  projects.css  settings.css  (+2 more)
(+49 files in other folders)
