[package]
name = "open-token-monitor"
version = "0.2.1"
description = "Local-first desktop monitor for Claude, Codex, and Gemini usage."
authors = ["Side Quests"]
license = "MIT"
repository = "https://github.com/Hitheshkaranth/OpenTokenMonitor"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_token_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-http = "2.5.7"
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.4.5"
notify = "6.1.1"
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3.32"
image = { version = "0.25", default-features = false, features = ["png"] }
dirs = "5"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true          # Strip debug symbols → smaller binary
lto = true            # Link-time optimization → smaller + faster
codegen-units = 1     # Max optimization (slower compile, smaller output)
opt-level = "s"       # Optimize for size
panic = "abort"       # Smaller binary, no unwinding overhead
